--- a/doc/release/0.18.0-notes.rst
+++ b/doc/release/0.18.0-notes.rst
@@ -22,7 +22,7 @@ New features
 ============
 
 Random matrices
-~~~~~~~~~~~~~~~
+---------------
 
 `scipy.stats.special_ortho_group` and `scipy.stats.ortho_group` provide
 generators of random matrices in the SO(N) and O(N) groups, respectively. They
@@ -64,6 +64,11 @@ The functions `sum`, `max`, `mean`, `min`, `transpose`, and `reshape` in
 `scipy.sparse` have had their signatures augmented with additional arguments
 and functionality so as to improve compatibility with analogously defined
 functions in `numpy`.
+
+new `scipy.stats.iqr` function
+------------------------------
+
+Computes the interquartile region of a distribution.
 
 Deprecated features
 ===================
