ENH: Added iqr function to compute IQR metric in scipy/stats/stats.py
Added tests. The tests run through most of the aspects tested by
`numpy.percentile`, from which they are originally derived. Restrictions
apply to the functionality as the version of numpy decreases below
1.11.0. The tests and documentation make this explicit.

--- a/doc/release/0.18.0-notes.rst
+++ b/doc/release/0.18.0-notes.rst
@@ -124,7 +124,10 @@ A large suite of global optimization benchmarks has been added to
 
 Trapezoidal distribution has been implemented as `scipy.stats.trapz`.
 Skew normal distribution has been implemented as `scipy.stats.skewnorm`.
-Burr type XII distribution has been implemented as `scipy.stats.burr12`. 
+Burr type XII distribution has been implemented as `scipy.stats.burr12`.
+
+New `scipy.stats.iqr` function computes the interquartile region of a
+distribution.
 
 Random matrices
 ~~~~~~~~~~~~~~~
