ENH: Add random correlation matrix generator

--- a/doc/release/0.18.0-notes.rst
+++ b/doc/release/0.18.0-notes.rst
@@ -29,6 +29,9 @@ generators of random matrices in the SO(N) and O(N) groups, respectively. They
 generate matrices in the Haar distribution, the only uniform distribution on
 these group manifolds.
 
+`scipy.stats.random_correlation` provides a generator for random
+correlation matrices, given specified eigenvalues.
+
 `scipy.interpolate` improvements
 --------------------------------
 
