COMPAT: Expand compatibility with fromnumeric.py
Fixes signature incompatibilities between functions
defined in numpy.core.fromnumeric and similarly defined
ones for scipy.sparse matrices by expanding the signatures
in scipy.sparse to accommodate (and also implement) some
of the functionality offered in NumPy, in particular, these
four functions:

1) sum
2) max
3) mean
4) min
5) reshape
6) transpose

Closes gh-5987.

--- a/doc/release/0.18.0-notes.rst
+++ b/doc/release/0.18.0-notes.rst
@@ -49,6 +49,14 @@ zero-phase low-pass FIR filter, and downsamples using `scipy.signal.upfirdn`.
 This method can be faster than FFT-based filtering provided by
 `scipy.signal.resample` for some signals.
 
+`scipy.sparse` compatibility improvements
+-----------------------------------------
+
+The functions `sum`, `max`, `mean`, `min`, `transpose`, and `reshape` in
+`scipy.sparse` have had their signatures augmented with additional arguments
+and functionality so as to improve compatibility with analogously defined
+functions in `numpy`.
+
 Deprecated features
 ===================
 
