Add versionadded tag and update docstring

--- a/THANKS.txt
+++ b/THANKS.txt
@@ -160,7 +160,7 @@ Philip DeBoer for wrapping random SO(N) and adding random O(N) and
 Tyler Reddy and Nikolai Nowaczyk for scipy.spatial.SphericalVoronoi
 Bill Sacks for fixes to netcdf i/o.
 Kolja Glogowski for a bug fix in scipy.special.
-
+Stuart Mumford for custom Gaussian kernels in ndimage.filter.
 
 Institutions
 ------------
