--- a/THANKS.txt
+++ b/THANKS.txt
@@ -159,6 +159,8 @@ Philip DeBoer for wrapping random SO(N) and adding random O(N) and
     correlation matrices in scipy.stats.
 Tyler Reddy and Nikolai Nowaczyk for scipy.spatial.SphericalVoronoi
 Bill Sacks for fixes to netcdf i/o.
+Kolja Glogowski for a bug fix in scipy.special.
+
 
 Institutions
 ------------
