--- a/THANKS.txt
+++ b/THANKS.txt
@@ -154,6 +154,8 @@ Bernardo Sulzbach for bug fixes.
 Alexander Grigorevskiy for adding extra LAPACK least-square solvers and 
     modifying linalg.lstsq function accordingly.
 Sam Lewis for enhancements to the basinhopping module.
+Kolja Glogowski for a bug fix in scipy.special.
+
 
 Institutions
 ------------
