--- a/doc/release/0.18.0-notes.rst
+++ b/doc/release/0.18.0-notes.rst
@@ -46,6 +46,14 @@ zero-phase low-pass FIR filter, and downsamples using `scipy.signal.upfirdn`.
 This method can be faster than FFT-based filtering provided by
 `scipy.signal.resample` for some signals.
 
+`scipy.optimize` improvements
+-----------------------------
+
+Generalized Simulating annealing method has been implemented in the function
+`scipy.optimize.gensa`. This method in the generalized version of the
+simulating annealing approach. It is efficient and reliable, especially for high
+dimension problems with a very large number of optima.
+
 Deprecated features
 ===================
 
@@ -68,7 +76,8 @@ Other changes
 
 Authors
 =======
-* Nikolay Mayorov
+* Nikolay Mayorovi
+* Sylvain Gubian
 
 Issues closed
 -------------
