--- a/doc/release/0.18.0-notes.rst
+++ b/doc/release/0.18.0-notes.rst
@@ -133,6 +133,8 @@ versions and so is more likely to reach convergence. See issue gh-5966.
 Trapezoidal distribution has been implemented as `scipy.stats.trapz`.
 Skew normal distribution has been implemented as `scipy.stats.skewnorm`.
 Burr type XII distribution has been implemented as `scipy.stats.burr12`.
+Three- and four-parameter kappa distributions have been implemented as
+`scipy.stats.kappa3` and `scipy.stats.kappa4`, respectively.
 
 New `scipy.stats.iqr` function computes the interquartile region of a
 distribution.
