MAINT: optimize: let user choose convergence criterion in `newton`
Before `newton` could only use absolute step size for its convergence
criterion; this lets it also use relative step size, absolute size of
the function value, or relative size of the function value.

Closes gh-6379.

--- a/doc/release/0.19.0-notes.rst
+++ b/doc/release/0.19.0-notes.rst
@@ -37,6 +37,8 @@ repeatable minimizations.
 The keyword `sigma` in `scipy.optimize.curve_fit` was overloaded to also accept
 the covariance matrix of errors in the data.
 
+The function `scipy.optimize.newton` supports more halting conditions.
+
 `scipy.signal` improvements
 ---------------------------
 
