--- a/THANKS.txt
+++ b/THANKS.txt
@@ -162,6 +162,7 @@ Bill Sacks for fixes to netcdf i/o.
 Kolja Glogowski for a bug fix in scipy.special.
 Surhud More for enhancing scipy.optimize.curve_fit to accept covariant errors
 on data.
+Antonio Ribeiro for implementing irrnotch and iirpeak functions.
 
 Institutions
 ------------
