DOC: ndimage: update c api section of tutorial
- Updates the example to use PyCapsules
- Adds a cython example
- Adds explicit signatures for callback functions

Also includes a Pep8 fix in `setup.py` and a Numpy compatibility fix
in `test_c_api.py`.

Closes gh-4938.

--- a/doc/release/0.19.0-notes.rst
+++ b/doc/release/0.19.0-notes.rst
@@ -37,6 +37,11 @@ Deprecated features
 Backwards incompatible changes
 ==============================
 
+`scipy.ndimage`
+---------------
+
+The callback function c api now uses PyCapsules for both Python 2 and
+Python 3.
 
 
 Other changes
