BUG: modify signal.find_peaks_cwt() to return array and accept sequence. Resolves gh-6560.

--- a/doc/release/0.19.0-notes.rst
+++ b/doc/release/0.19.0-notes.rst
@@ -65,7 +65,8 @@ Deprecated features
 
 Backwards incompatible changes
 ==============================
-
+The function `scipy.signal.find_peaks_cwt()` now returns an array instead of
+a list.
 
 
 Other changes
