BUG: "sp.linalg.solve_discrete_are" fails for random data
This fixes #2251 and its tests per the discussion on the issue page. The
doc string is updated.

--- a/THANKS.txt
+++ b/THANKS.txt
@@ -163,6 +163,7 @@ Kolja Glogowski for a bug fix in scipy.special.
 Surhud More for enhancing scipy.optimize.curve_fit to accept covariant errors
 on data.
 Antonio Ribeiro for implementing irrnotch and iirpeak functions.
+Ilhan Polat for bug fixes on Riccati solvers.
 
 Institutions
 ------------
