DOC: distance.squareform: fix html docs, and add note about dtype changes.
The dtype changes were implemented in gh-6457.

--- a/doc/release/0.19.0-notes.rst
+++ b/doc/release/0.19.0-notes.rst
@@ -66,6 +66,8 @@ Deprecated features
 Backwards incompatible changes
 ==============================
 
+`scipy.spatial.distance.squareform` now returns arrays of the same dtype as
+the input, instead of always float64.
 
 
 Other changes
