MAINT: special: make `errprint` return a boolean
The documentation says the input flag is a boolean (though it also
accepts an int), but the output flag is an int. This makes the output
flag also a boolean.

Also tweaks the `errprint` documentation.

--- a/doc/release/0.19.0-notes.rst
+++ b/doc/release/0.19.0-notes.rst
@@ -69,6 +69,8 @@ Backwards incompatible changes
 `scipy.spatial.distance.squareform` now returns arrays of the same dtype as
 the input, instead of always float64.
 
+`scipy.special.errprint` now returns a boolean.
+
 The function `scipy.signal.find_peaks_cwt()` now returns an array instead of
 a list.
 
