BUG: CS matrix prune should copy data from larger arrays
Pruning resizes the "data" and "indices" arrays after explict zeros
have been removed from a sparse matrix. However, this is implemented
using slicing, which just returns a view of the original array. If
the original array is relatively large, a new array should be used
instead of a view, allowing the original to be garbage collected.

--- a/doc/release/0.19.0-notes.rst
+++ b/doc/release/0.19.0-notes.rst
@@ -82,6 +82,10 @@ FIR filters to minimum phase.
 The functions `scipy.sparse.save_npz` and `scipy.sparse.load_npz` were added,
 providing simple serialization for some sparse formats.
 
+The `prune` method of classes `bsr_matrix`, `csc_matrix`, and `csr_matrix`
+was updated to reallocate backing arrays under certain conditions, reducing
+memory usage.
+
 `scipy.special` improvements
 ----------------------------
 
