ENH: Added scipy.spatial.distance.directed_hausdorff

--- a/doc/release/0.19.0-notes.rst
+++ b/doc/release/0.19.0-notes.rst
@@ -44,6 +44,9 @@ cython to improve performance
 `SphericalVoronoi` can handle > 200 k points (at least 10 million) & has
 improved performance
 
+The function `scipy.spatial.distance.directed_hausdorff` was
+added to calculate the directed Hausdorff distance.
+
 `scipy.ndimage` improvements
 ----------------------------
 
