ENH: Axis dependent extrapolation modes in filters

--- a/doc/release/0.19.0-notes.rst
+++ b/doc/release/0.19.0-notes.rst
@@ -46,6 +46,9 @@ cython to improve performance
 
 The callback function C API supports PyCapsules in Python 2.7
 
+Multidimensional filters now allow having different extrapolation modes for
+different axes.
+
 `scipy.optimize` improvements
 -----------------------------
 
