--- a/THANKS.txt
+++ b/THANKS.txt
@@ -166,6 +166,7 @@ Antonio Ribeiro for implementing irrnotch and iirpeak functions.
 Ilhan Polat for bug fixes on Riccati solvers.
 Sebastiano Vigna for code in the stats package related to Kendall's tau.
 John Draper for bug fixes.
+Alvaro Sanchez-Gonzalez for axis-dependent modes in multidimensional filters.
 
 Institutions
 ------------
