--- a/THANKS.txt
+++ b/THANKS.txt
@@ -165,6 +165,7 @@ on data.
 Antonio Ribeiro for implementing irrnotch and iirpeak functions.
 Ilhan Polat for bug fixes on Riccati solvers.
 Sebastiano Vigna for code in the stats package related to Kendall's tau.
+John Draper for bug fixes.
 
 Institutions
 ------------
