--- a/THANKS.txt
+++ b/THANKS.txt
@@ -162,7 +162,8 @@ Bill Sacks for fixes to netcdf i/o.
 Kolja Glogowski for a bug fix in scipy.special.
 Surhud More for enhancing scipy.optimize.curve_fit to accept covariant errors
 on data.
-Antonio Ribeiro for irrnotch and iirpeak functions and improvements on BFGS method.
+Antonio Ribeiro for implementing irrnotch, iirpeak and trust-region-exact methods
+    and for improvements on BFGS implemetation.
 Ilhan Polat for bug fixes on Riccati solvers.
 Sebastiano Vigna for code in the stats package related to Kendall's tau.
 John Draper for bug fixes.
