--- a/doc/release/1.0.0-notes.rst
+++ b/doc/release/1.0.0-notes.rst
@@ -42,6 +42,13 @@ The ``tocsr`` method of COO matrices is now several times faster.
 `scipy.sparse.linalg.lsmr` now accepts an initial guess, yielding potentially
 faster convergence.
 
+`scipy.optimize` improvements
+-----------------------------
+
+The method `trust-region-exact` was added to the function `scipy.optimize.minimize`.
+This new trust-region method solves the subproblem with higher accuracy at the cost
+of more Hessian factorizations (compared to dogleg) and is able to deal with indefinite
+Hessians. It seems very competitive against the other Newton methods implemented in scipy.
 
 Deprecated features
 ===================
