--- a/doc/release/0.19.0-notes.rst
+++ b/doc/release/0.19.0-notes.rst
@@ -141,6 +141,11 @@ spline given data points and boundary conditions.
 New function `scipy.interpolate.make_lsq_spline` constructs a least-squares
 spline approximation given data points.
 
+`scipy.integrate` improvements
+------------------------------
+
+Now `scipy.integrate.fixed_quad` supports vector-valued functions.
+
 
 Deprecated features
 ===================
