--- a/doc/release/0.19.0-notes.rst
+++ b/doc/release/0.19.0-notes.rst
@@ -25,6 +25,14 @@ New features
 `scipy.linalg` improvements
 ---------------------------
 
+The function `scipy.linalg.solve` obtained two more keywords ``assume_a`` and
+``transposed``. The underlying LAPACK routines are replaced with "expert"
+versions and now can also be used to solve symmetric, hermitian and positive
+definite coefficient matrices. Moreover, ill-conditioned matrices now cause
+a warning to be emitted with the estimated condition number information. Old
+``sym_pos`` keyword is kept for backwards compatibility reasons however it
+is identical to using ``assume_a='pos'``.
+
 The function `scipy.linalg.matrix_balance` was added to perform the so-called
 matrix balancing using the LAPACK xGEBAL routine family. This can be used to
 approximately equate the row and column norms through diagonal similarity
