--- a/THANKS.txt
+++ b/THANKS.txt
@@ -175,6 +175,7 @@ David Nicholson for bug fixes in spectral functions.
 Roman Feldbauer for improvements in scipy.sparse
 Dominic Antonacci for statistics documentation.
 David Hagen for the object-oriented ODE solver interface.
+Arno Onken for contributions to scipy.stats.
 
 Institutions
 ------------
